# byta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/byta/: main.cpp  token.hpp  tokenise.cpp  tokenise.hpp  traits.cpp  traits.hpp  version.hpp
